avatar ko set kiya

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,4 +1,7 @@
 
+#--------------------------------------------------------------
+# About Section
+avatar: img/face.png
 
 
 #--------------------------------------------------------------
