section's bg colors changed

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 
 #--------------------------------------------------------------
 # About Section
-avatar: img/face.png
+avatar: img/face.jpg
 
 
 #--------------------------------------------------------------
