description meta updated

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ social-links:
 
 
 seo:
-  description: 'Portfolio of Aravind Balla'
-  keywords: 'Portfolio, aravind, balla, aravindballa, aravind balla'
+  description: 'Aravind Balla is a 19 year old undergrad student, who spends most of the time making stuff.'
+  keywords: 'aravind, balla, aravindballa, aravind balla, aravind.balla, aravind-balla, aravind balla portfolio, portfolio of aravind balla'
   rel-author: 'https://plus.google.com/u/+AravindBalla/'
   rel-publisher: 'https://plus.google.com/+AravindBalla'
